--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:padding="8dp"
     android:fillViewport="true"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".ui.recipe.RecipeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
